style(test): altera para List::of parâmetro da function
PL-3570